tests/bad/typing/026-fun-unification-2-args.clap
** 'a -> int -> bool
val f = fun (x) (y) => (x = (y + 1))

val _ = (f (42))("toto")
